<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_login"/>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_cv_login"
            android:orientation="vertical"
            android:layout_marginTop="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_email_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:autoSizeMinTextSize="18sp"
                android:fontFamily="@font/poppins_bold"
                android:minHeight="48dp"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:alpha="100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_email_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:alpha="0"
                android:hint="Email"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black"
                tools:alpha="100">

                <com.pinaaa.cvabangputra.components.CustomEditTextEmail
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_password_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:alpha="0"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/black"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:endIconMode="password_toggle"
                android:hint="Password"
                app:hintTextColor="@color/black"
                tools:alpha="100">

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_lupa_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lupa_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                tools:alpha="100" />

            <com.pinaaa.cvabangputra.components.CustomButtonLogin
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:alpha="0"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:text="@string/login"
                android:textAllCaps="false"
                android:background="@drawable/btn_rounded"
                tools:alpha="100" />


            <LinearLayout
                android:id="@+id/ll_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0"
                android:orientation="horizontal"
                tools:alpha="100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="50dp"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_register_login"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:minHeight="50dp"
                    android:text="@string/daftar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>