<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login"/>

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_cv_login"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:alpha="0"
            android:autoSizeMinTextSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:minHeight="48dp"
            android:text="Register"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_name_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:alpha="0"
            android:hint="Name"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="clear_text"
            tools:alpha="100">

            <EditText
                android:id="@+id/et_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_email_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:alpha="0"
            android:hint="Email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="clear_text"
            tools:alpha="100">

            <com.pinaaa.cvabangputra.components.CustomEditTextEmail
                android:id="@+id/et_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_password_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:alpha="0"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="password_toggle"
            android:hint="Password"
            tools:alpha="100">

            <EditText
                android:id="@+id/et_password_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_nomor_telepon_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:alpha="0"
            android:hint="Nomor Telepon"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="clear_text"
            tools:alpha="100">

            <EditText
                android:id="@+id/et_nomor_telepon_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_tangal_lahir_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:alpha="0"
            android:hint="Tanggal lahir"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="clear_text"
            tools:alpha="100">

            <com.pinaaa.cvabangputra.components.CustomEditTextDate
                android:id="@+id/et_tangal_lahir_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/tv_persyaratan_register"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:alpha="0"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/persyaratan"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:alpha="100" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:alpha="0"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/register"
            android:textAllCaps="false"
            android:backgroundTintMode="add"
            android:backgroundTint="@color/colorPrimary"
            tools:alpha="100" />


        <LinearLayout
            android:id="@+id/ll_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"
            android:orientation="horizontal"
            tools:alpha="100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_login_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:minHeight="50dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>